--- a/master/print.html
+++ b/master/print.html
@@ -194,6 +194,7 @@ For everything else (e.g., how to install supported language servers), see the <
 <li><a href="install.html#arch-linux-extra">Arch Linux extra</a></li>
 <li><a href="install.html#nixos">NixOS</a></li>
 <li><a href="install.html#flatpak">Flatpak</a></li>
+<li><a href="install.html#snap">Snap</a></li>
 <li><a href="install.html#appimage">AppImage</a></li>
 </ul>
 </li>
@@ -280,6 +281,15 @@ accepts the new settings on first use.</p>
 <pre><code class="language-sh">flatpak install flathub com.helix_editor.Helix
 flatpak run com.helix_editor.Helix
 </code></pre>
+<h3 id="snap"><a class="header" href="#snap">Snap</a></h3>
+<p>Helix is available on <a href="https://snapcraft.io/helix">Snapcraft</a> and can be installed with:</p>
+<pre><code class="language-sh">snap install --classic helix
+</code></pre>
+<p>This will install Helix as <code>/snap/bin/helix</code> (so make sure <code>/snap/bin</code> is in your <code>PATH</code>), which is not the preferred invocation (<code>hx</code>).
+As a workaround you can manually alias the command globally with:</p>
+<pre><code class="language-sh">snap alias helix hx
+</code></pre>
+<p>Or, otherwise, just alias in your shell's config.</p>
 <h3 id="appimage"><a class="header" href="#appimage">AppImage</a></h3>
 <p>Install Helix using the Linux <a href="https://appimage.org/">AppImage</a> format.
 Download the official Helix AppImage from the <a href="https://github.com/helix-editor/helix/releases/latest">latest releases</a> page.</p>
@@ -1126,6 +1136,7 @@ Languages</a> guide for more language configuration information.</p>
 <tr><td>fish</td><td>✓</td><td>✓</td><td>✓</td><td></td></tr>
 <tr><td>forth</td><td>✓</td><td></td><td></td><td><code>forth-lsp</code></td></tr>
 <tr><td>fortran</td><td>✓</td><td></td><td>✓</td><td><code>fortls</code></td></tr>
+<tr><td>fsharp</td><td>✓</td><td></td><td></td><td><code>fsautocomplete</code></td></tr>
 <tr><td>gdscript</td><td>✓</td><td>✓</td><td>✓</td><td></td></tr>
 <tr><td>git-attributes</td><td>✓</td><td></td><td></td><td></td></tr>
 <tr><td>git-commit</td><td>✓</td><td>✓</td><td></td><td></td></tr>
@@ -1224,7 +1235,7 @@ Languages</a> guide for more language configuration information.</p>
 <tr><td>sql</td><td>✓</td><td></td><td></td><td></td></tr>
 <tr><td>sshclientconfig</td><td>✓</td><td></td><td></td><td></td></tr>
 <tr><td>starlark</td><td>✓</td><td>✓</td><td></td><td></td></tr>
-<tr><td>svelte</td><td>✓</td><td></td><td></td><td><code>svelteserver</code></td></tr>
+<tr><td>svelte</td><td>✓</td><td></td><td>✓</td><td><code>svelteserver</code></td></tr>
 <tr><td>sway</td><td>✓</td><td>✓</td><td>✓</td><td><code>forc</code></td></tr>
 <tr><td>swift</td><td>✓</td><td></td><td></td><td><code>sourcekit-lsp</code></td></tr>
 <tr><td>t32</td><td>✓</td><td></td><td></td><td></td></tr>
